setup of images folder; create mixins module; _reset.scss(button general style) billy-styles-folder

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,7 @@
 @import "_reset";
 @import "_variables";
+@import './mixins';
 @import "_header";
 @import "_section2";
+
+@import './billy-styles/main';
