--- a/styles/_reset.scss
+++ b/styles/_reset.scss
@@ -3,8 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 html,body{
     font-size: 10px;
+    font-family: 'Poppins', sans-serif;
 }
 
 // .body-container{
