--- a/styles/_section2.scss
+++ b/styles/_section2.scss
@@ -1,24 +1,99 @@
 /** SECTION TWO*///
+.section-two {
+    background-color: $bg-color;
+}
+
+.section-header {
+        align-self: center;
+        font-size: 45px;
+        color: $header-color;
+        text-transform: capitalize;
+    }
+
+.section-two-container {
+    max-width: 1200px;
+}
+
 .section-wrapper-two {
-    padding: 80px 0;
+    @include padding();
+    flex-direction: column;
+    // align-items: center;
+    // justify-content: center;
+    gap: 3rem;
+
 
     .carousel-container {
-        overflow-x: auto;
+        // padding: 0 5vw 0 5vw;
+        // width: 1200px;
+        // min-width: 1200px;
+        position: relative;
+        
+        .carousel-box-wrapper {
+            overflow-x: scroll;
+            overflow-y: hidden;
+            scroll-behavior:auto;
+            scroll-snap-type: inline mandatory;
+            position: relative;
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
+        }
+
+        .btn-navigate {
+            height: 150px;
+            display: flex;
+            align-items: center;
+            padding: 20px;
+            cursor: pointer;
+            position: absolute;
+            top: 0;
+            z-index: 5;
+
+
+            &:hover {
+                background-color: rgba($color: $color-green, $alpha: 0.2);
+            }
+
+            button {
+                border: none;
+                background: none;
+                cursor: pointer;
+            }
+        }
+
+        .left-navigate {
+            left: 0;
+        }
+
+        .right-navigate {
+            right: 0;
+        }
+
+        
 
         .boxes {
-            height: 120px;
-            // flex-basis: 120px;
-            background-color: orange;
-            // margin: 0 .2rem;
+            cursor: pointer;
+            scroll-snap-align: end;
+            height: 150px;
+            text-align: center;
             flex-shrink: 0;
             display: flex;
             flex-direction: column;
-            gap: 1rem;
-            font-size: 15px;
+            gap: 1.6rem;
+            font-size: 18px;
+            text-transform: capitalize;
+            font-weight: 600;
             justify-content: center;
             align-items: center;
-            border: 1px solid black;
+            transition: transform 0.5s ease;
+            // border: 0px solid grey;
             // padding: .5rem;
+
+            &:hover {
+                color: $color-green;
+                transform: scale(1.2);
+            }
 
         }
     }
