--- a/styles/style.css
+++ b/styles/style.css
@@ -182,4 +182,15 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   align-items: center;
   border: 1px solid black;
+}
+
+footer section.footer-upper {
+  width: 80%;
+  margin-left: 10%;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 2%;
+}
+footer section.footer-upper div.footer-elements {
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
