done without responsive

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,3 +8,7 @@
 
 @import './billy-styles/main';
 @import './billy-styles/footer';
+@import './billy-styles/blog-post';
+@import './billy-styles/photo_gallery';
+@import './billy-styles/section-six';
+@import './billy-styles/section-four';
