--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -6,7 +6,7 @@
     width: $width;
     margin-left: $margin;
 }
-@mixin text-style($font-size,$font-weight){
+@mixin text-style($font-size,$font-weight,$font-family){
     font-family: $font-family;
     font-size: $font-size;
     font-weight: $font-weight;
