--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,3 +2,6 @@ $color-green: #21b360;
 $color-orange: #FCA22A;
 $bg-color: #f8f8f8;
 $header-color: #0e385d;
+$playfair:'Playfair Display', serif;
+$poppins:'Poppins';
+$footer-color:#777777;
