--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 
 html, body {
   font-size: 10px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 button {
@@ -14,7 +14,7 @@ button {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-weight: bold;
   text-align: center;
 }
@@ -29,11 +29,9 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: capitalize;
   color: white;
   border: none;
-  -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   cursor: pointer;
 }
-
 .btn-default-round:hover {
   background: #21b360;
 }
@@ -138,21 +136,13 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   align-items: center;
 }
-<<<<<<< HEAD
-=======
-
 .section-one .main-section-container h2 {
   font-size: 2.5rem;
 }
-
->>>>>>> 137c69ef8571872001ed34bc906775de3545f96a
 .section-one .main-section-container h1 {
   font-size: 90px;
   text-align: center;
 }
-<<<<<<< HEAD
-=======
-
 .section-one .main-section-container .line {
   background-color: #FCA22A;
   width: 90px;
@@ -160,48 +150,20 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 40px;
   margin-top: 20px;
 }
-
->>>>>>> 137c69ef8571872001ed34bc906775de3545f96a
 .section-one .main-section-container p {
   font-size: 21px;
   padding: 2rem 12rem 5rem;
   text-align: center;
   z-index: 1;
-<<<<<<< HEAD
-}
-.section-one .main-section-container .btn-default-round {
-  font-size: 22px;
-  padding: 15px 30px;
-  font-weight: 600;
-  border-radius: 50px;
-  line-height: 20px;
-  background: #FCA22A;
-  color: white;
-  border: none;
-  transition: all 0.5s ease;
-}
-.section-one .main-section-container .btn-default-round:hover {
-  background: #21b360;
-=======
   line-height: 30px;
->>>>>>> 137c69ef8571872001ed34bc906775de3545f96a
 }
 .section-one .slider-navigation {
   z-index: 2;
   display: flex;
   position: relative;
-<<<<<<< HEAD
   justify-content: center;
   align-items: center;
-=======
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   margin-top: 1.5rem;
->>>>>>> 137c69ef8571872001ed34bc906775de3545f96a
 }
 .section-one .slider-navigation .nav-btn-slide {
   width: 12px;
@@ -226,9 +188,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .section-header {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  align-self: center;
   font-size: 45px;
   color: #0e385d;
   text-transform: capitalize;
@@ -241,16 +201,12 @@ h1, h2, h3, h4, h5, h6 {
 .section-wrapper-two {
   padding-top: 80px;
   padding-bottom: 80px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   gap: 3rem;
 }
 .section-wrapper-two .carousel-container {
   position: relative;
 }
-
 .section-wrapper-two .carousel-container .carousel-box-wrapper {
   overflow-x: scroll;
   overflow-y: hidden;
@@ -259,89 +215,52 @@ h1, h2, h3, h4, h5, h6 {
       scroll-snap-type: inline mandatory;
   position: relative;
 }
-
 .section-wrapper-two .carousel-container .carousel-box-wrapper::-webkit-scrollbar {
   display: none;
 }
-
 .section-wrapper-two .carousel-container .btn-navigate {
   height: 150px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 20px;
   cursor: pointer;
   position: absolute;
   top: 0;
   z-index: 5;
 }
-
 .section-wrapper-two .carousel-container .btn-navigate:hover {
   background-color: rgba(33, 179, 96, 0.2);
 }
-
 .section-wrapper-two .carousel-container .btn-navigate button {
   border: none;
   background: none;
   cursor: pointer;
 }
-
 .section-wrapper-two .carousel-container .left-navigate {
   left: 0;
 }
-
 .section-wrapper-two .carousel-container .right-navigate {
   right: 0;
 }
 .section-wrapper-two .carousel-container .boxes {
-<<<<<<< HEAD
-  height: 120px;
-  background-color: orange;
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  font-size: 15px;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid black;
-=======
   cursor: pointer;
   scroll-snap-align: end;
   height: 150px;
   text-align: center;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-shrink: 0;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   gap: 1.6rem;
   font-size: 18px;
   text-transform: capitalize;
   font-weight: 600;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: -webkit-transform 0.5s ease;
-  transition: -webkit-transform 0.5s ease;
+  justify-content: center;
+  align-items: center;
   transition: transform 0.5s ease;
-  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
 }
-
 .section-wrapper-two .carousel-container .boxes:hover {
   color: #21b360;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .section-three {
@@ -353,43 +272,31 @@ h1, h2, h3, h4, h5, h6 {
   color: #20527e;
   padding-top: 1.5rem;
 }
-
 .section-describe span {
   text-transform: uppercase;
   color: #21b360;
 }
 
 .section-wrapper-three {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding-top: 0px;
   padding-bottom: 80px;
 }
-
 .section-wrapper-three .section-input-sort {
   padding: 5rem 0 5rem 0;
 }
-
 .section-wrapper-three .section-input-sort .input-container:nth-of-type(3) input {
   width: 150px;
   background: none;
   background-color: #fff;
 }
-
 .section-wrapper-three .section-input-sort .input-container:nth-of-type(4) input {
   width: 150px;
   background: none;
   background-color: #fff;
 }
-
 .section-wrapper-three .section-input-sort .input-container > select {
   padding: 13px;
   border-radius: 5px;
@@ -400,18 +307,15 @@ h1, h2, h3, h4, h5, h6 {
   color: grey;
   outline: none;
 }
-
 .section-wrapper-three .section-input-sort div {
   padding-left: 15px;
   padding-right: 15px;
 }
-
 .section-wrapper-three .section-input-sort div > h3 {
   text-transform: uppercase;
   font-size: 14px;
   margin-bottom: 7px;
 }
-
 .section-wrapper-three .section-input-sort div > input {
   padding: 15px;
   border-radius: 5px;
@@ -421,11 +325,9 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #fff;
   width: 250px;
 }
-
 .section-wrapper-three .section-input-sort div > input:focus {
   outline: none;
 }
-
 .section-wrapper-three button {
   font-size: 18px;
   background-color: #0e385d;
@@ -439,35 +341,28 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 80px;
   padding-bottom: 80px;
 }
-
 .section-wrapper-four .about-content {
   padding: 0 15px;
 }
-
 .section-wrapper-four h2 {
   font-size: 55px;
 }
-
 .section-wrapper-four .section-four-describe {
   font-size: 18px;
   font-family: serif;
 }
-
 .section-wrapper-four .about-content-container {
   padding-top: 50px;
 }
-
 .section-wrapper-four .about-content-nav {
   padding: 0 20px;
 }
-
 .section-wrapper-four .about-content-nav ul {
   padding: 0 20px;
   position: relative;
 }
-
 .section-wrapper-four .about-content-nav ul::before {
-  content: '';
+  content: "";
   position: absolute;
   background-color: #EEEEEE;
   width: 1px;
@@ -475,7 +370,6 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   right: 0;
 }
-
 .section-wrapper-four .about-content-nav ul li {
   position: relative;
   list-style-type: none;
@@ -488,13 +382,11 @@ h1, h2, h3, h4, h5, h6 {
   width: 120px;
   cursor: pointer;
 }
-
 .section-wrapper-four .about-content-nav ul li:last-child {
   padding-bottom: 0;
 }
-
 .section-wrapper-four .about-content-nav ul li::before {
-  content: '';
+  content: "";
   position: absolute;
   height: 10px;
   width: 10px;
@@ -504,19 +396,15 @@ h1, h2, h3, h4, h5, h6 {
   right: -30px;
   background-color: #B6B6B6;
 }
-
 .section-wrapper-four .about-content-nav ul li:last-child::before {
   top: 60%;
 }
-
 .section-wrapper-four .about-content-nav ul li:first-child::before {
   top: 0;
 }
-
 .section-wrapper-four .about-content-nav ul li.active::before {
   background-color: #FCA22A;
 }
-
 .section-wrapper-four .tab-items-text-content {
   font-size: 14px;
   line-height: 1.975em;
@@ -524,41 +412,383 @@ h1, h2, h3, h4, h5, h6 {
   color: #4b4b4b;
   padding: 0 15px;
 }
-
 .section-wrapper-four .tab-items-text-content span {
   margin-bottom: 50px;
 }
-
 .section-wrapper-four .tab-items-text-content ul {
   padding-left: 50px;
   margin-top: 3rem;
   line-height: 3.5rem;
 }
-
 .section-wrapper-four .tab-items-text-content ul li {
   list-style-type: none;
   position: relative;
 }
-
 .section-wrapper-four .tab-items-text-content ul li::before {
   position: absolute;
-  content: '';
+  content: "";
   width: 8px;
   height: 8px;
   background-color: #B6B6B6;
   border-radius: 50%;
   left: -25px;
   top: 15px;
->>>>>>> 137c69ef8571872001ed34bc906775de3545f96a
 }
 
 footer section.footer-upper {
   width: 80%;
   margin-left: 10%;
+  display: flex;
+  margin-bottom: 30px;
+  justify-content: space-between;
+  gap: 2%;
+}
+footer section.footer-upper div.footer-elements {
+  width: 30%;
+}
+footer section.footer-upper div.footer-elements h1.footer-heading {
+  font-family: "Playfair Display", serif;
+  font-size: 22px;
+  font-weight: 700px;
+  color: #FCA22A;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.267);
+  padding: 0px 0px 10px 0px;
+  margin: 0;
+  text-align: left;
+}
+footer section.footer-upper div.footer-elements .photo-house-rent {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+footer section.footer-upper div.footer-elements p.heading-description {
+  font-family: "Poppins";
+  font-size: 14px;
+  font-weight: 500px;
+  color: #777777;
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+footer section.footer-upper div.footer-elements div.button button.more {
+  background-color: #FCA22A;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  font-family: "Poppins";
+  font-size: 16px;
+  font-weight: 600;
+  padding: 10px 40px 10px 40px;
+  color: #f8f8f8;
+}
+footer section.footer-upper div.footer-elements div.button button.more:hover {
+  background-color: #21b360;
+}
+footer section.footer-upper div.footer-elements ul.footer-list {
+  list-style-type: none;
+  margin-top: 30px;
+}
+footer section.footer-upper div.footer-elements ul.footer-list li.list-item {
+  padding: 12px 0px 12px 0px;
+  font-family: "Poppins";
+  font-size: 16px;
+  font-weight: 600;
+  color: #3a3a3a;
+  position: relative;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+footer section.footer-upper div.footer-elements ul.footer-list li.list-item span a {
+  text-decoration: none;
+  color: #FCA22A;
+}
+footer section.footer-upper div.footer-elements ul.footer-list li.list-item span a:visited {
+  color: #FCA22A;
+}
+footer section.footer-upper div.footer-elements ul.footer-list li.list-item::before {
+  content: "";
+  width: 20px;
+  height: 2px;
+  background-color: rgba(119, 119, 119, 0.4509803922);
+  left: 4px;
+}
+footer section.footer-upper div.footer-elements ul.footer-list-instagram {
+  list-style-type: none;
+  margin-top: 30px;
   display: grid;
   grid-template-columns: auto auto auto;
   gap: 2%;
 }
-footer section.footer-upper div.footer-elements {
+footer section.footer-upper div.footer-elements ul.footer-list-instagram li.list-item {
+  width: 95%;
+}
+footer hr {
+  width: 85%;
+  margin-left: 10%;
+}
+footer p.copyright {
+  text-align: center;
+  font-family: "Poppins";
+  font-size: 14px;
+  font-weight: 600;
+  color: #6f6f6f;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+footer p.copyright span {
+  color: #FCA22A;
+}
+
+main section.blog-post {
+  background-color: whitesmoke;
+  padding-bottom: 50px;
+}
+main section.blog-post h1.banner {
+  font-family: "Playfair Display", serif;
+  font-size: 60px;
+  font-weight: 700;
+  color: #0e385d;
+  text-align: center;
+}
+main section.blog-post p.heading-description {
+  text-align: center;
+  font-family: "Poppins";
+  font-size: 16px;
+  font-weight: 600;
+  color: #0e385d;
+}
+main section.blog-post div.blog-holder {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2%;
+  width: 90%;
+  margin-left: 7%;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit {
+  width: 32%;
+  background-color: white;
+  border-radius: 5px;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.photo {
   width: 100%;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.photo img {
+  width: 100%;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.h1-ul-p {
+  width: 90%;
+  margin-left: 5%;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.h1-ul-p p.date-and-type {
+  font-family: "Poppins";
+  font-size: 13px;
+  font-weight: 600;
+  color: #9a9a9a;
+  padding-top: 18px;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.h1-ul-p p.date-and-type span {
+  border-left: 2px solid #9a9a9a;
+  margin-left: 15px;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.h1-ul-p p.date-and-type span a {
+  text-decoration: none;
+  font-family: "Poppins";
+  font-size: 13px;
+  font-weight: 600;
+  color: #9a9a9a;
+  padding-left: 15px;
+  word-spacing: 2px;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.h1-ul-p h1 {
+  font-family: "Poppins";
+  font-size: 20px;
+  font-weight: 800;
+  color: #292928;
+  padding: 15px 0px 20px 0px;
+  text-align: left;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.h1-ul-p ul {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  list-style-type: none;
+  border-top: 1px solid rgba(0, 0, 0, 0.267);
+  padding-top: 15px;
+  padding-bottom: 20px;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.h1-ul-p ul li {
+  font-family: "Poppins";
+  font-size: 13px;
+  font-weight: 400;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.h1-ul-p ul li i.fa-eye {
+  color: rgba(0, 0, 0, 0.267);
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.h1-ul-p ul li i.fa-heart {
+  color: skyblue;
+}
+main section.blog-post div.blog-holder div.best-places-to-visit div.h1-ul-p ul li i.fa-message {
+  color: limegreen;
+}
+main section.blog-post button {
+  outline: none;
+  border: none;
+  background-color: #FCA22A;
+  font-family: "Poppins";
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+  padding: 10px 50px 10px 50px;
+  margin-left: 45%;
+  border-radius: 5px;
+  margin-top: 60px;
+}
+main section.blog-post button:hover {
+  background-color: #21b360;
+}
+
+section.section-five {
+  display: flex;
+}
+section.section-five ul.photo-gallery {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  list-style-type: none;
+  gap: 1.5%;
+}
+section.section-five ul.photo-gallery li.image-list {
+  width: 75%;
+}
+section.section-five div.gallery-right-hand {
+  width: 30%;
+  margin-left: 5%;
+}
+section.section-five div.gallery-right-hand h1 {
+  font-family: "Playfair Display", serif;
+  font-size: 60px;
+  font-weight: 700;
+  text-align: left;
+  width: 75%;
+  color: #0e385d;
+}
+section.section-five div.gallery-right-hand h3 {
+  font-family: "Poppins";
+  font-size: 25px;
+  font-weight: 600;
+  text-align: left;
+  color: #525252;
+  width: 60%;
+  line-height: 35px;
+  padding: 20px 0px 20px 0px;
+}
+section.section-five div.gallery-right-hand p {
+  font-family: "Poppins";
+  font-size: 16px;
+  font-weight: 500;
+  color: #525252;
+  line-height: 35px;
+  padding: 20px 0px 20px 0px;
+}
+section.section-five div.gallery-right-hand button {
+  outline: none;
+  border: none;
+  background-color: #0e385d;
+  font-family: "Poppins";
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+  padding: 15px 40px 15px 40px;
+  border-radius: 50px;
+  margin-top: 10px;
+}
+section.section-five div.gallery-right-hand button:hover {
+  background-color: #21b360;
+}
+
+main section.section-six {
+  margin-top: 120px;
+}
+main section.section-six div.background-image {
+  height: 250px;
+  background-image: url("../../assets/images/contact-bg-image.png");
+  background-size: cover;
+}
+main section.section-six div.background-image div.background-color {
+  background-color: rgba(0, 0, 0, 0.274);
+  height: 100%;
+}
+main section.section-six div.background-image div.background-color div.contact-list {
+  width: 80%;
+  margin-left: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+main section.section-six div.background-image div.background-color div.contact-list p {
+  font-family: "Poppins";
+  font-size: 30px;
+  font-weight: 700;
+  color: white;
+}
+main section.section-six div.background-image div.background-color div.contact-list p span {
+  color: #FCA22A;
+  font-family: "Poppins";
+  font-size: 20px;
+  font-weight: 700;
+}
+main section.section-six div.background-image div.background-color div.contact-list div.email-phone-num p.phone-num a {
+  text-decoration: none;
+  color: white;
+}
+main section.section-six div.background-image div.background-color div.contact-list div.email-phone-num p.email a {
+  text-decoration: none;
+  color: white;
+}
+main section.section-six div.background-image div.background-color div.contact-list div.email-phone-num button {
+  outline: none;
+  border: none;
+  background-color: #FCA22A;
+  font-family: "Poppins";
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+  padding: 10px 30px 10px 30px;
+  border-radius: 5px;
+  margin-top: 0px;
+}
+main section.section-six div.background-image div.background-color div.contact-list div.email-phone-num button:hover {
+  background-color: #21b360;
+}
+
+main section.section-four {
+  margin-top: 40px;
+  margin-bottom: 110px;
+}
+main section.section-four div.background-image {
+  background-image: url("../../assets/images/count-down-image.png");
+  height: 250px;
+  background-size: cover;
+}
+main section.section-four div.background-image div.background-color {
+  background-color: rgba(0, 0, 0, 0.342);
+  height: 100%;
+}
+main section.section-four div.background-image div.background-color ul.statistics-list {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  padding: 90px 0px 30px 0px;
+  width: 80%;
+  margin-left: 10%;
+}
+main section.section-four div.background-image div.background-color ul.statistics-list li {
+  width: 20%;
+  margin-left: 2.5%;
+  font-family: "Poppins";
+  font-size: 40px;
+  font-weight: 700;
+  color: white;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
