--- a/styles/_reset.scss
+++ b/styles/_reset.scss
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+
+
+@mixin linkHover() {
+    a:hover {
+        color: $color-green !important;
+    }
+}
+
 html,body{
     font-size: 10px;
     font-family: 'Poppins', sans-serif;
