--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,10 @@
 @import "_reset";
 @import "_variables";
 @import "_header";
+@import "./dashboard/_header";
+@import "./apartment/_header";
 @import "_section2";
 @import "_section3";
 @import "_section4";
+@import "_section6";
+@import "_footer";
