--- a/styles/style.scss
+++ b/styles/style.scss
@@ -16,3 +16,4 @@
 @import './billy-styles/photo_gallery';
 @import './billy-styles/section-six';
 @import './billy-styles/section-four';
+@import './billy-styles/rooms-and-appartments';
